network-policy/base/global-policies/apiserver.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: egress-apiserver-allow
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  order: 500.0
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: role == 'node'
        ports:
          - 6443
