network-policy/base/global-policies/egress-backyard-deny.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: egress-bmc-deny
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  order: 1000.0
  types:
    - Egress
  egress:
    - action: Log
      destination:
        selector: role == 'bmc'
    - action: Deny
      destination:
        selector: role == 'bmc'
---
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: egress-node-deny
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  order: 1000.0
  types:
    - Egress
  egress:
    - action: Log
      destination:
        selector: role == 'node'
    - action: Deny
      destination:
        selector: role == 'node'
---
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: egress-bastion-deny
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  order: 1000.0
  types:
    - Egress
  egress:
    - action: Log
      destination:
        selector: role == 'bastion'
    - action: Deny
      destination:
        selector: role == 'bastion'
---
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: egress-switch-deny
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  order: 1000.0
  types:
    - Egress
  egress:
    - action: Log
      destination:
        selector: role == 'switch'
    - action: Deny
      destination:
        selector: role == 'switch'
