network-policy/base/global-policies/ingress-all-deny.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: ingress-all-deny
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  order: 10000.0
  types:
    - Ingress
  ingress:
    - action: Log
    - action: Deny
